// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`listFiles route handleListFiles should list existing files with correct metadata 1`] = `3`;

exports[`listFiles route Pagination should limit the number of files returned 1`] = `
{
  "filteredFiles": null,
  "filteredSize": null,
  "filteredSizeFormatted": null,
  "limit": 3,
  "offset": 0,
  "total": 5,
  "totalSize": 40,
  "totalSizeFormatted": "40.00 B",
}
`;

exports[`listFiles route Pagination should apply offset correctly 1`] = `
{
  "filteredFiles": null,
  "filteredSize": null,
  "filteredSizeFormatted": null,
  "limit": 2,
  "offset": 2,
  "total": 5,
  "totalSize": 40,
  "totalSizeFormatted": "40.00 B",
}
`;

exports[`listFiles route Pagination should use default values when limit and offset are not provided 1`] = `
{
  "filteredFiles": null,
  "filteredSize": null,
  "filteredSizeFormatted": null,
  "limit": 20,
  "offset": 0,
  "total": 5,
  "totalSize": 40,
  "totalSizeFormatted": "40.00 B",
}
`;

exports[`listFiles route Content Search should filter only files with searchable extensions when content=true 1`] = `
[
  "file3",
  "file2",
  "file1",
  "file0",
]
`;

exports[`listFiles route Content Search should search inside the content when textSearch and content are provided 1`] = `
[
  "file3",
  "file1",
]
`;

exports[`listFiles route Content Search should return the correct metadata for content search results 1`] = `
{
  "filteredFiles": 4,
  "filteredSize": 19,
  "filteredSizeFormatted": "19.00 B",
  "limit": 20,
  "offset": 0,
  "total": 6,
  "totalSize": 39,
  "totalSizeFormatted": "39.00 B",
}
`;
